js now running game

--- a/rock_paper_scissors.html
+++ b/rock_paper_scissors.html
@@ -4,29 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script>
-        var myArray = ("Rock", "Paper", "Scissors")
-        var playerSelection = "Rock"
-        var computerSelection(){
-            return myArray(Math.random() * myArray.length)
-        }
-        
-        function playround(playerSelection, computerSelection) {
-    if( playerSelection === computerSelection) {
-        displayResults("Tie game!")
-    } else if(
-        (playerSelection == "Rock" && computerSelection == "Scissors") ||
-        (playerSelection == "Paper" && computerSelection == "Rock") ||
-        (playerSelection == "Scissors" && computerSelection == "Paper")
-    ){ 
-        playerScore = ++playerScore;
-    }
-    else( 
-        computerScore = ++computerScore;
-    </script>
+    <script src="rock_paper_scissors.js"></script>
     
 </body>
 </html>
